--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,31 @@
-.idea
-*.iml
-out
-target
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+.vscode/
+
+.DS_Store
+
+/.idea/shelf/
+/workspace.xml
+*.idea
+/out
+/target
+.xml
