--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-
 .apt_generated
 .classpath
 .factorypath
@@ -12,20 +11,18 @@ out/
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
-
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
-
 .vscode/
-
 .DS_Store
-
 /.idea/shelf/
 /workspace.xml
 *.idea
 /out
 /target
 .xml
+/out/
+/target/
